--- a/FRONT-END/LeafLife/package.json
+++ b/FRONT-END/LeafLife/package.json
@@ -19,6 +19,7 @@
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
